# libmatchbox2

./: ChangeLog  Makefile.am  README  TODO  configure.ac  libmatchbox.doap
data/: Makefile.am  libmatchbox2.pc.in
data/themes/: Makefile.am  README
data/themes/Default/: Makefile.am  theme.desktop  theme.xml
data/themes/PngSample/: Makefile.am  theme.xml
debian/: changelog  control  copyright  libmatchbox2-dev.install  rules
matchbox/: Makefile.am  mb-wm-config.h.in
matchbox/client-types/: Makefile.am  mb-wm-client-app.c  mb-wm-client-app.h  mb-wm-client-desktop.c  mb-wm-client-desktop.h  mb-wm-client-dialog.c  mb-wm-client-dialog.h  mb-wm-client-input.c  mb-wm-client-input.h  mb-wm-client-menu.c  mb-wm-client-menu.h  mb-wm-client-note.c  mb-wm-client-note.h  mb-wm-client-override.c  mb-wm-client-override.h  mb-wm-client-panel.c  mb-wm-client-panel.h
matchbox/comp-mgr/: Makefile.am  README  mb-wm-comp-mgr-clutter.c  mb-wm-comp-mgr-clutter.h  mb-wm-comp-mgr-xrender.c  mb-wm-comp-mgr-xrender.h  mb-wm-comp-mgr.c  mb-wm-comp-mgr.h
matchbox/core/: Makefile.am  mb-window-manager.c  mb-window-manager.h  mb-wm-atoms.c  mb-wm-atoms.h  mb-wm-client-base.c  mb-wm-client-base.h  mb-wm-client-window.c  mb-wm-client-window.h  mb-wm-client.c  mb-wm-client.h  mb-wm-debug-symbols.h  mb-wm-debug.c  mb-wm-debug.h  mb-wm-decor.c  mb-wm-decor.h  mb-wm-keys.c  mb-wm-keys.h  mb-wm-layout.c  mb-wm-layout.h  mb-wm-macros.h  mb-wm-main-context.c  mb-wm-main-context.h  mb-wm-object-props.h  mb-wm-object.c  mb-wm-object.h  mb-wm-props.c  mb-wm-props.h  mb-wm-root-window.c  mb-wm-root-window.h  mb-wm-stack.c  mb-wm-stack.h  mb-wm-types.h  mb-wm-util.c  mb-wm-util.h  mb-wm.h  xas.c  xas.h
matchbox/managers/: Makefile.am
matchbox/managers/simple/: Makefile.am
matchbox/theme-engines/: Makefile.am  mb-wm-theme-png.c  mb-wm-theme-png.h  mb-wm-theme-xml.c  mb-wm-theme-xml.h  mb-wm-theme.c  mb-wm-theme.h
tests/: test-hildon-stacking.c  test-toplevel.c  test-transience.c
util/: Makefile.am  matchbox-remote.c
